.prelude/effect/repos/tsgo/testdata/baselines/reference/effect-v4/floatingEffectGen.errors.txt
=== Metadata ===
Effect version: 4.0.0

/.src/floatingEffectGen.ts(4,4): error TS377001: This Effect value is neither yielded nor used in an assignment. effect(floatingEffect)


==== /.src/floatingEffectGen.ts (1 errors) ====
    import { Effect } from "effect"
    
    export const program = Effect.gen(function*(){
       Effect.log("hello") // <- this should be yielded instead
       ~~~~~~~~~~~~~~~~~~~
!!! error TS377001: This Effect value is neither yielded nor used in an assignment. effect(floatingEffect)
    })
